lib/typed-mind/grammar/grammar.js
    source_file: ($) => seq(repeat($._line), optional($._final_line_no_newline)),

    // Error recovery (S-GRAMMAR-4a): PATH A shipped — there is deliberately
    // NO catch-all `error_line` alternative below. A line matching none of
    // these choices falls through to tree-sitter's built-in GLR recovery,
    // producing a genuine `(ERROR)` node with real ranges (doc §2 "Q0 SPIKE
    // QUESTION with a decision rule"; Q0's fuzz gate proved this terminates
    // cleanly under the revised extras design above). Downstream consumers
    // (TM-3's S-PARSE-3 diagnostics mapper) walk `(ERROR)`/`(MISSING)` only —
    // the standard idiom, not a second node shape to scan for.
    _line: ($) =>
      choice(
        $.comment_line,
        $.import_statement,
        $.suppress_line,
        $.suppression_block,
        $.longform_block,
        $.classfile_block_sigil,
        $.program_declaration,
        $.file_declaration,
        $.function_declaration,
        $.class_declaration,
        $.classfile_declaration,
        $.constants_declaration,
        $.dto_declaration,
        $.asset_declaration,
        $.uicomponent_declaration,
        $.runparameter_declaration,
        $.dependency_declaration,
        $.typedef_declaration,
        $.dto_field,
        $._continuation,
        $._description_line,
        $._ws_line,
        $._newline,
      ),

    // The EOF-without-trailing-newline case: reuse of every top-level
    // production's body via `_line_end_final` (no trailing `\n` consumed).
    // Only entity declarations, continuations, and comments are legal as
    // the last line of a file with no newline; blank/whitespace-only
    // "lines" at EOF need no representation since there is nothing after
    // them to delimit.
    _final_line_no_newline: ($) =>
      choice(
        $.comment_line_final,
        $.import_statement_final,
        $.suppress_line_final,
        $.program_declaration_final,
        $.file_declaration_final,
        $.function_declaration_final,
        $.class_declaration_final,
        $.classfile_declaration_final,
        $.constants_declaration_final,
        $.dto_declaration_final,
        $.asset_declaration_final,
        $.uicomponent_declaration_final,
        $.runparameter_declaration_final,
        $.dependency_declaration_final,
        $.typedef_declaration_final,
        $.dto_field_final,
        $._continuation_final,
        $._description_line_final,
      ),

    // --- document-level (D1, D3, D4) -------------------------------------

    // D1: full-line comment at column 0.
    comment_line: ($) => seq($.comment, $._newline),
    import_statement: ($) => seq($.import_head, optional(seq('as', $.entity_name)), $._line_end),
    program_declaration: ($) =>
      seq($.entity_name, '->', $.entity_name, optional($.string), optional($.version), optional($.inline_comment), $._line_end),
    file_declaration: ($) => seq($.entity_name, '@', $.path, ':', optional($.inline_comment), $._line_end),
    function_declaration: ($) => seq($.entity_name, '::', $.signature, optional($.inline_comment), $._line_end),
    class_declaration: ($) => seq($.entity_name, '<:', optional($.inherit_list), optional($.inline_comment), $._line_end),
    classfile_declaration: ($) =>
      seq($.entity_name, '#:', $.path, optional(seq('<:', $.inherit_list)), optional($.inline_comment), $._line_end),
    constants_declaration: ($) =>
      seq($.entity_name, '!', $.path, optional(seq(':', $.entity_name)), optional($.inline_comment), $._line_end),
    dto_declaration: ($) => seq($.entity_name, '%', optional($.string), optional($.inline_comment), $._line_end),
    asset_declaration: ($) => seq($.entity_name, '~', $.string, optional($.inline_comment), $._line_end),
    uicomponent_declaration: ($) => seq($.entity_name, choice('&!', '&'), $.string, optional($.inline_comment), $._line_end),
    runparameter_declaration: ($) =>
      seq($.entity_name, $.param_type, $.string, optional($.param_marker), optional($.inline_comment), $._line_end),
    dependency_declaration: ($) =>
      seq(choice($.entity_name, $.dependency_name), '^', $.string, optional($.version), optional($.inline_comment), $._line_end),
    import_list: ($) => seq($._indent, '<-', $.name_list, optional($.inline_comment), $._line_end),
    export_list: ($) => seq($._indent, '->', $.name_list, optional($.inline_comment), $._line_end),
    calls_list: ($) => seq($._indent, '~>', $.name_list, optional($.inline_comment), $._line_end),
    input_name: ($) => seq($._indent, '<-', $.entity_name, optional($.inline_comment), $._line_end),
    output_name: ($) => seq($._indent, '->', $.entity_name, optional($.inline_comment), $._line_end),
    methods_list: ($) => seq($._indent, '=>', $.name_list, optional($.inline_comment), $._line_end),
    affects_list: ($) => seq($._indent, '~', $.name_list, optional($.inline_comment), $._line_end),
    contains_list: ($) => seq($._indent, '>', $.name_list, optional($.inline_comment), $._line_end),
    contained_by_list: ($) => seq($._indent, '<', $.name_list, optional($.inline_comment), $._line_end),
    contains_program: ($) => seq($._indent, '>>', $.entity_name, optional($.inline_comment), $._line_end),
    default_value: ($) => seq($._indent, '=', $.string, optional($.inline_comment), $._line_end),
    consumes_list: ($) => seq($._indent, '$<', $.name_list, optional($.inline_comment), $._line_end),
    entity_comment: ($) => seq($._indent, $.comment, $._newline),
    description_line: ($) => seq($._indent, $.string, optional($.inline_comment), $._line_end),
    dto_field: ($) =>
      seq(
        $._indent,
        '-',
        $.field_name,
        optional('?'),
        ':',
        $.field_type,
        optional($.string),
        optional($.optional_marker),
        optional($.inline_comment),
        $._line_end,
      ),
    field_type: ($) => $.type_expr,

    // type_union / type_intersection: `&` binds tighter than `|`, matching
    // TypeScript (doc §1). Left-associative — chained members without a
    // deliberate parenthesization all attach at the same level; precedence
    // numbers only need to differ, not carry semantic weight beyond ordering
    // union above intersection.
    type_expr: ($) => $.type_union,
    type_union: ($) => prec.left(1, seq($.type_intersection, repeat(seq('|', $.type_intersection)))),
    type_intersection: ($) => prec.left(2, seq($.type_postfix, repeat(seq('&', $.type_postfix)))),

    // type_postfix: suffix arrays, any depth (`number[][]`, corpus-attested
    // complex-dto-example.tmd:45).
    type_postfix: ($) => prec.left(3, seq($.type_atom, repeat(seq('[', ']')))),

    // type_atom: the six structured productions plus the flagged type_opaque
    // fallback leaf (doc §1 "Opaque fallback", authorized scope amendment).
    // type_generic is listed before type_named so a generic's base name does
    // not shadow-match as a bare type_named before the parser sees the `<`
    // (GLR tries both; ordering here is documentation of intent, not a
    // correctness requirement — the grammar is unambiguous at this position
    // because type_generic's `<...>` suffix makes it strictly longer).
    //
    // KNOWN GAP (documented, not silently accepted): a function-type field
    // whose parameter list carries a name:type pair — `(n: number) => void`
    // — is NOT reachable through type_opaque; it parses with a syntax/*
    // diagnostic. Root cause, confirmed by exhausting every precedence lever
    // tree-sitter exposes (static prec() both directions on _type_paren_group
    // AND type_opaque, prec.dynamic() on _type_paren_group, and choice-order
    // alone — all five reverted, none changed the outcome): `type_named`
    // reduces the bare parameter name (`n`) all the way up through
    // type_postfix/type_intersection/type_union/type_expr to a COMPLETE,
    // locally-valid type_atom the instant it sees `n`, one token before the
    // disambiguating `:` is even visible — the reduce-reduce tie against
    // type_opaque's identical single-token first piece resolves at that
    // point, discarding the opaque derivation before the later failure (the
    // stranded `: number) => void`) exists to weigh against it. This is the
    // grammar's own documented external-scanner boundary (file header,
    // "S-GRAMMAR-3 reserves [it] for stop-and-report") — reaching it is a
    // stop-and-report per that standing rule, not a Q1 defect to paper over.
    // Zero real .tmd corpus files contain this shape (grep-verified); the
    // doc's own cited representative example, `() => void` (empty parameter
    // list, no colon to create the ambiguity), parses correctly and is what
    // X-TYPE-1's "extrapolated function-type fixture" check binding exercises.
    // Qualified-name opaque fix (corpus-confirmed regression, single
    // instance: lib/typed-mind-typescript/architecture.tmd:107
    // `projectConfig: ts.CompilerOptions`): a dotted/qualified type
    // reference has no structured production (the doc's six kinds have no
    // member-access shape) and must fall to type_opaque — but a bare
    // type_named ALSO matches the qualified name's leading identifier at the
    // exact same token, and (per type_atom's "KNOWN GAP" comment above)
    // tree-sitter resolves that kind of tie by committing to whichever
    // alternative reduces first, discarding the correct-but-longer
    // derivation. Unlike the function-type gap, THIS tie is resolvable
    // without an external scanner: a qualified name is objectively the
    // LONGER match at the same starting position (identifier PLUS `.` PLUS
    // more), so a single dedicated token capturing the whole
    // `identifier(.identifier)+` run wins outright on length — no ambiguity,
    // no precedence tuning needed. Aliased to `type_opaque` so the CST→AST
    // layer (type-expr-from-cst.ts) needs no new case: this is never a new
    // structured kind (the doc never authorized a qualified-name
    // production) — opaque is where "type text outside the six structured
    // kinds" already belongs.
    type_atom: ($) =>
      choice(
        $.type_generic,
        $.type_readonly_array,
        alias($._qualified_name_opaque_token, $.type_opaque),
        alias($._paramlist_opaque_run, $.type_opaque),
        alias($._typeof_opaque_run, $.type_opaque),
        $.type_named,
        $.type_literal_string,
        $.type_literal_number,
        $._type_paren_group,
        $.type_opaque,
      ),

    _qualified_name_opaque_token: () => token(seq(/[A-Za-z_]\w*/, repeat1(seq('.', /[A-Za-z_]\w*/)))),

    // tm10-inc2-grammar (issue #50): _paramlist_opaque_open consumes the
    // minimal disambiguating prefix as ONE atomic token — '(' + identifier +
    // optional whitespace + ':' — mirroring block_kw's "bake the whole
    // disambiguating run into one token" mechanism and
    // _qualified_name_opaque_token's own longest-match precedent above. This
    // token is objectively LONGER than type_named's bare-identifier match at
    // the same start position (it reaches past the identifier to the ':'),
    // so it wins the lexer race outright — no parser-level precedence
    // involved, unlike the five reverted attempts the type_atom "KNOWN GAP"
    // comment above records. Once it wins, the surrounding production
    // consumes the rest of the balanced run via the existing _opaque_piece
    // machinery (already proven for nested object literals) so the WHOLE
    // '(x: number) => void' — not just the '(x:' prefix — lands in one
    // type_opaque leaf. Confirmed empirically against the real corpus
    // instance webhookstorage's outbound-delivery WorkerDeps DTO field
    // carries (multi-param, optional markers, generic return type) — see
    // this file's corpus fixtures. Scope: this closes every real TypeScript
    // function-type shape (a parameter always has `name: type` or the list
    // is empty, `() => void`, already covered pre-existing). It does NOT
    // close the `fn (custom)` sibling in type_atom's KNOWN GAP family — that
    // shape has no colon and no lexical signal to anchor a longest-match
    // token on; see the corpus fixture's comment for why it stays open.
    _paramlist_opaque_run: ($) => prec.right(seq($._paramlist_opaque_open, repeat($._opaque_piece), ')', repeat($._opaque_piece))),

    // tm10-inc2-grammar (issue #83): `(typeof X)[number]` — a TypeScript
    // `typeof` type query, optionally followed by indexed access. `typeof`
    // has no structured production (the doc's six kinds have no type-query
    // shape) and must fall to type_opaque, same rationale as the
    // qualified-name fix above. Distinguishing token: '(' + optional
    // whitespace + 'typeof' + REQUIRED trailing whitespace — objectively
    // longer than type_named's bare-'('-triggered _type_paren_group attempt
    // would consume before failing, so it wins the lexer race the same way
    // _paramlist_opaque_open does. The trailing content (the operand, the
    // closing paren, and an optional `[...]` indexed-access suffix with
    // arbitrary content — NOT the empty `[]` type_postfix already covers)
    // rides the same _opaque_piece continuation machinery already proven for
    // nested groups (it already balances `[`/`]` for nested object
    // literals, reused here for the indexed-access suffix with zero new
    // machinery). Confirmed empirically against the real corpus instance
    // `lib/typed-mind/src/checker/check-codes.ts:122`'s
    // `export type CheckCode = (typeof CHECK_CODES)[number];` — see this
    // file's corpus fixtures.
    _typeof_opaque_run: ($) => prec.right(seq($._typeof_opaque_open, repeat($._opaque_piece), ')', repeat($._opaque_piece))),

    // type_named: a bare identifier reference (builtin primitive, generic
    // name, or an entity-table name — checker territory, Q2). Wraps
    // entity_name so the AST kind carries its own span distinct from a
    // generic's base-name span.
    type_named: ($) => $.entity_name,

    // type_generic: `Base<Arg1, Arg2, ...>` — commas separate arguments; the
    // `Pick<S3Client, "send">` census repro (doc §1) parses with two
    // arguments, the second a string literal.
    type_generic: ($) => seq(field('base', $.type_named), '<', $.type_expr, repeat(seq(',', $.type_expr)), '>'),

    type_literal_string: ($) => $.string,

    // type_literal_number: doc §1 — a new numeric token. Corpus-attested
    // unquoted numeric-literal union: complex-dto-example.tmd:42
    // `priority: 1 | 2 | 3 | 4 | 5`.
    type_literal_number: () => token(/-?\d+(\.\d+)?/),

    // Parenthesized grouping for precedence override (`(A | B)[]`). A real
    // recursive production (not a token) — full type_expr nests inside,
    // unlike the flat _paren_group signature/field_type fallback. No prec
    // annotation: neither static nor dynamic precedence changes the outcome
    // for the ambiguous `(name: type)` shape (see type_atom's "KNOWN GAP"
    // comment for the full root-cause account) — plain seq keeps this rule's
    // behavior easiest to reason about for the cases it DOES resolve
    // correctly (`(A | B)[]`, `Pick<S3Client, "send">`, readonly's paren
    // form), which is every case the doc's fixture-bound checks require.
    _type_paren_group: ($) => seq('(', $.type_expr, ')'),

    // type_readonly_array: `readonly T[]` / `readonly (A | B)[]`. Two
    // concrete forms per the readonlyIdentKwToken/readonlyParenKwToken
    // header comment above — both alias to the same visible `readonly_kw`
    // node so downstream AST code has one place to detect the prefix.
    _opaque_piece: ($) =>
      choice(
        $._opaque_paren_group,
        $._opaque_bracket_group,
        $._opaque_brace_group,
        // biome-ignore lint/complexity/noUselessEscapeInRegex: required for tree-sitter's regex compiler, see comment above
        token(prec(-1, /[^ \t\n"(){}\[\]]+/)),
      ),
